# video-edit-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  agr.toml  mkdocs.yml  pyproject.toml  skills-lock.json
.claude/skills/release/: SKILL.md
.github/workflows/: docs.yml  test.yml
.playwright-cli/: page-2026-07-15T08-55-12-007Z.yml
docs/: RESEARCH-EDITING-PIPELINE.md  VIDEO-EDITING-SKILL-ROADMAP.md  concepts.md  examples.md  faq.md  index.md  reference.md  skills.md  workflows.md
docs/diary/: 2026-07-12-extract-video-edit-cli.md  2026-07-14-youtube-highlight-shorts.md  2026-07-14-youtube-shorts-skill-test.md
overrides/: main.html
skills/create-clips/: SKILL.md
skills/create-clips/references/: package-format.md
skills/video-edit-cli/: SKILL.md
skills/video-edit-cli/agents/: openai.yaml
skills/video-edit-cli/references/: edit-plan.md  subtitles-and-assets.md  transcription.md  vertical-video.md  workspace.md
skills/video-editor/: SKILL.md
skills/video-editor/agents/: openai.yaml
skills/video-editor/references/: audio-restoration.md  cut-review.md  multicamera.md  subtitles-and-assets.md  vertical-video.md
src/video_editor/: __init__.py  assets.py  cli.py  diagnostics.py  errors.py  ffmpeg.py  inspection.py  media.py  plans.py  profiles.py  provenance.py  reframe.py  rendering.py  result.py  review.py  skills.py  subtitles.py  sync.py  workspace.py
src/video_editor/audio/: __init__.py  analysis.py  comparison.py  denoise.py  mastering.py  replacement.py
src/video_editor/schemas/: __init__.py  edit-plan.schema.json  project-profile.schema.json  result.schema.json  transcript.schema.json  workspace.schema.json
src/video_editor/transcription/: __init__.py  base.py  fixture.py  mlx_whisper.py  views.py
tests/: conftest.py  generate_fixtures.py  test_acceptance.py  test_audio.py  test_diagnostics.py  test_inspection.py  test_multicam.py  test_packaging.py  test_plans.py  test_review.py  test_skills.py  test_transcription.py  test_workspace.py
