[project]
name = "video-edit-cli"
version = "0.1.2"
description = "Video editing for AI agents: cut podcasts, make YouTube Shorts with subtitles, sync multicam, master audio — headless, local, open source."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = [
    "video",
    "editing",
    "ffmpeg",
    "agents",
    "cli",
    "ai-agents",
    "claude-code",
    "agent-skills",
    "youtube-shorts",
    "podcast-editing",
    "subtitles",
    "transcription",
    "whisper",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6",
]

[project.optional-dependencies]
mlx = ["mlx-whisper>=0.4"]
df = [
    "deepfilternet>=0.5; python_version < '3.13'",
    "soundfile>=0.12; python_version < '3.13'",
    "torch>=2.2,<2.3; python_version < '3.13'",
    "torchaudio>=2.2,<2.3; python_version < '3.13'",
]

[project.scripts]
video-edit-cli = "video_editor.cli:main"

[project.urls]
Repository = "https://github.com/computerlovetech/video-edit-cli"
Issues = "https://github.com/computerlovetech/video-edit-cli/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]
docs = [
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_editor"]

# Ship the user-facing agent skills inside the package (playwright-cli pattern):
# the canonical copies stay in the repository-root skills/ directory, and only
# the listed skills are bundled. Development-only skills must not be added here.
[tool.hatch.build.targets.wheel.force-include]
"skills/video-edit-cli" = "video_editor/skills/video-edit-cli"

[tool.hatch.build.targets.sdist]
include = ["src", "skills", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real local model backends (deselected by default)",
]
addopts = "-m 'not integration'"
